# aoc

./: README.md  bench.sh  style.sh  test.sh
2018/: README.md
2018/outputs/: Day02Part2  Day09Part2  Day11Part1  Day13Part2  Day14Part1  Day14Part2  Day23Part2
2018/solutions/: solutions.cabal
2018/solutions/day01/: Part1.hs  Part2.hs
2018/solutions/day02/: Part1.hs
2018/solutions/day03/: Part1.hs
2019/: README.md
2019/inputs/: day01.txt
2019/outputs/: Day01Part1  Day01Part2  Day02Part1  Day05Part1  Day05Part2  Day07Part2  Day08Part2  Day09Part1  Day11Part2  Day12Part2  Day14Part2  Day16Part1  Day16Part2
2019/solutions/: solutions.cabal
2019/solutions/day01/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day02/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day03/: Part1.hs  Part2.hs
2019/solutions/day04/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day05/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day06/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day07/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day08/: Part1.hs  Part2.hs
2019/solutions/day09/: Part1.hs  Part2.hs
2019/solutions/day10/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day11/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day12/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day13/: Part1.hs  Part2.hs
2019/solutions/day14/: Common.hs  Part1.hs  Part2.hs
2019/solutions/day16/: Common.hs  Part1.hs  Part2.hs
2019/solutions/lib-intcode/: Intcode.hs
2020/: README.md
2020/outputs/: Day01Part2  Day03Part2  Day09Part1  Day09Part2  Day10Part2  Day14Part1  Day14Part2  Day16Part2  Day18Part1  Day18Part2
2020/solutions/: .gitignore  solutions.cabal
2021/: README.md
2021/outputs/: Day02Part1  Day02Part2  Day03Part1  Day03Part2  Day06Part2  Day08Part2  Day09Part2  Day10Part2  Day13Part2  Day14Part2
2021/solutions/: .gitignore  solutions.cabal
2021/solutions/day01/: Part1.hs  Part2.hs
2021/solutions/day02/: Part1.hs  Part2.hs
2021/solutions/day03/: Part1.hs  Part2.hs
2021/solutions/day04/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day05/: Part1.hs  Part2.hs
2021/solutions/day06/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day07/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day08/: Part1.hs  Part2.hs
2021/solutions/day09/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day10/: Part1.hs  Part2.hs
2021/solutions/day11/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day12/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day13/: Common.hs  Part1.hs  Part2.hs
2021/solutions/day14/: Common.hs  Part1.hs  Part2.hs
2022/: README.md
2022/outputs/: Day05Part1  Day05Part2  Day07Part1  Day07Part2  Day10Part2  Day15Part1  Day15Part2
2022/solutions/: solutions.cabal
2022/solutions/day01/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day02/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day03/: Part1.hs  Part2.hs
2022/solutions/day04/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day05/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day06/: Part1.hs  Part2.hs
2022/solutions/day07/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day08/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day09/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day10/: Part1.hs  Part2.hs
2022/solutions/day11/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day12/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day13/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day14/: Common.hs  Part1.hs  Part2.hs
2022/solutions/day15/: Common.hs  Part1.hs  Part2.hs
2023/: README.md
2023/inputs/: day04.txt  day06.txt
2023/outputs/: Day03Part2  Day04Part2  Day05Part1  Day05Part2  Day06Part1  Day06Part2  Day07Part1  Day09Part1  Day11Part1  Day11Part2
2023/solutions/: solutions.cabal
2023/solutions/day01/: Part1.hs  Part2.hs
2023/solutions/day02/: Common.hs  Part1.hs  Part2.hs
2023/solutions/day03/: Common.hs  Part1.hs  Part2.hs
2023/solutions/day04/: Common.hs  Part1.hs  Part2.hs
2023/solutions/day05/: Common.hs  Part1.hs  Part2.hs
2023/solutions/day06/: Part1.hs  Part2.hs
2023/solutions/day07/: Part1.hs
2023/solutions/day08/: Part1.hs
2023/solutions/day09/: Common.hs  Part1.hs  Part2.hs
2023/solutions/day10/: Part1.hs
2023/solutions/day11/: Common.hs  Part1.hs  Part2.hs
outputs/: Day07Part1  Day10Part1  Day11Part2  Day12Part2  Day13Part1  Day19Part2  Day21Part1  Day21Part2
shared/: Utils.hs
solutions/: Day1Part1.hs  Day1Part2.hs  Day2Part1.hs  Day3Part1.hs  Day3Part2.hs  Day4Part1.hs  Day4Part2.hs  Utils.hs  solutions.cabal
solutions/day01/: Common.hs  Part1.hs  Part2.hs
solutions/day02/: Part1.hs  Part2.hs
solutions/day03/: Part1.hs  Part2.hs
solutions/day04/: Common.hs  Part1.hs  Part2.hs
solutions/day05/: Part1.hs  Part2.hs
solutions/day06/: Common.hs  Part1.hs  Part2.hs
solutions/day07/: Common.hs  Part2.hs
solutions/day08/: Part1.hs  Part2.hs
solutions/day09/: Common.hs
solutions/day1/: Part1.hs  Part2.hs
solutions/day10/: Common.hs  Part1.hs  Part2.hs
solutions/day11/: Common.hs  Part1.hs  Part2.hs
solutions/day12/: Common.hs  Part1.hs  Part2.hs
solutions/day13/: Common.hs  Part1.hs  Part2.hs
solutions/day14/: Part1.hs  Part2.hs
solutions/day15/: Common.hs  Part1.hs  Part2.hs
solutions/day16/: Common.hs  Part1.hs  Part2.hs
solutions/day17/: Common.hs  Part1.hs  Part2.hs
solutions/day18/: Common.hs  Part1.hs  Part2.hs
solutions/day19/: Common.hs  Part1.hs  Part2.hs
solutions/day2/: Part2.hs
solutions/day20/: Common.hs  Part1.hs  Part2.hs
solutions/day21/: Common.hs  Part1.hs  Part2.hs
solutions/day22/: Common.hs  Part1.hs  Part2.hs
solutions/day23/: Common.hs  Part1.hs  Part2.hs
solutions/day24/: Common.hs  Part1.hs  Part2.hs
solutions/day25/: Part1.hs
solutions/day3/: Part2.hs
solutions/day4/: Common.hs  Part1.hs  Part2.hs
solutions/day5/: Part1.hs  Part2.hs
solutions/day6/: Common.hs  Part1.hs  Part2.hs
solutions/day7/: Common.hs  Part1.hs  Part2.hs
solutions/day8/: Part2.hs
solutions/day9/: Common.hs  Part1.hs  Part2.hs
solutions/lib/: Day4Common.hs  Utils.hs
(+76 files in other folders)
