cabal-version:       2.2

name:                solutions
version:             2018
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

library
  exposed-modules:     Utils
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -O3
  hs-source-dirs:      lib

common exe
  build-depends:       base, solutions
  default-language:    Haskell2010
  ghc-options:         -O3

executable Day1Part1
  import:              exe
  main-is:             Day1Part1.hs

executable Day1Part2
  import:              exe
  build-depends:       containers
  main-is:             Day1Part2.hs

executable Day2Part1
  import:              exe
  main-is:             Day2Part1.hs

executable Day2Part2
  import:              exe
  main-is:             Day2Part2.hs

executable Day3Part1
  import:              exe
  build-depends:       vector
  main-is:             Day3Part1.hs

executable Day3Part2
  import:              exe
  build-depends:       vector
  main-is:             Day3Part2.hs
