cabal-version:       2.2

name:                solutions
version:             2018
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

common base
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -O3

common exe
  import:              base
  build-depends:       solutions

library
  import:              base
  exposed-modules:     Utils
  hs-source-dirs:      lib

executable Day1Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day1

executable Day1Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  hs-source-dirs:      day1

executable Day2Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day2

executable Day2Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day2

executable Day3Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       vector
  hs-source-dirs:      day3

executable Day3Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       vector
  hs-source-dirs:      day3

executable Day4Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day4

executable Day4Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day4

executable Day5Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day5

executable Day5Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  hs-source-dirs:      day5

executable Day6Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day6

executable Day6Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day6
