cabal-version:       2.2

name:                solutions
version:             2018
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

common base
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall

common exe
  import:              base
  build-depends:       solutions

library
  import:              base
  exposed-modules:     Utils
  build-depends:       vector
  hs-source-dirs:      lib

executable Day01Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day01

executable Day01Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day01

executable Day02Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day02

executable Day02Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day02

executable Day03Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       vector
  hs-source-dirs:      day03

executable Day03Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       vector
  hs-source-dirs:      day03

executable Day04Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day04

executable Day04Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day04

executable Day05Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day05

executable Day05Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  hs-source-dirs:      day05

executable Day06Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  build-depends:       vector
  hs-source-dirs:      day06

executable Day06Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  build-depends:       vector
  hs-source-dirs:      day06

executable Day07Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day07

executable Day07Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day07

executable Day08Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day08

executable Day08Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day08

executable Day09Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       vector
  other-modules:       Common
  hs-source-dirs:      day09

executable Day09Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       vector
  other-modules:       Common
  hs-source-dirs:      day09

executable Day10Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day10

executable Day10Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day10

executable Day11Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day11

executable Day11Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day11

executable Day12Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day12

executable Day12Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day12

executable Day13Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day13

executable Day13Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day13

executable Day14Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       vector
  hs-source-dirs:      day14

executable Day14Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       vector
  hs-source-dirs:      day14

executable Day16Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day16

executable Day16Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  other-modules:       Common
  hs-source-dirs:      day16

executable Day17Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day17

executable Day17Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day17

executable Day18Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day18

executable Day18Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day18

executable Day19Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       vector
  other-modules:       Common
  hs-source-dirs:      day19

executable Day19Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       vector
  other-modules:       Common
  hs-source-dirs:      day19

executable Day20Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       containers, fgl
  other-modules:       Common
  hs-source-dirs:      day20

executable Day20Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers, fgl
  other-modules:       Common
  hs-source-dirs:      day20

executable Day21Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       vector
  other-modules:       Common
  hs-source-dirs:      day21

executable Day21Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers, vector
  other-modules:       Common
  hs-source-dirs:      day21

executable Day22Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day22

executable Day23Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day23
