cabal-version:       2.2

name:                solutions
version:             2019
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

common base
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall

common exe
  import:              base
  build-depends:       solutions

library
  import:              base
  exposed-modules:     Utils
  build-depends:       vector
  hs-source-dirs:      ../../shared

library intcode
  import:              base
  exposed-modules:     Intcode
  build-depends:       solutions, vector
  hs-source-dirs:      lib-intcode

executable Day01Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day01

executable Day01Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day01

executable Day02Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       intcode, vector
  hs-source-dirs:      day02

executable Day02Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       intcode, vector
  hs-source-dirs:      day02

executable Day03Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       containers
  hs-source-dirs:      day03

executable Day03Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       containers
  hs-source-dirs:      day03

executable Day04Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  hs-source-dirs:      day04

executable Day04Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  hs-source-dirs:      day04

executable Day05Part1
  import:              exe
  main-is:             Part1.hs
  build-depends:       intcode
  hs-source-dirs:      day05

executable Day05Part2
  import:              exe
  main-is:             Part2.hs
  build-depends:       intcode
  hs-source-dirs:      day05

executable Day06Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day06

executable Day06Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  build-depends:       containers
  hs-source-dirs:      day06

executable Day07Part1
  import:              exe
  main-is:             Part1.hs
  other-modules:       Common
  build-depends:       async, vector
  hs-source-dirs:      day07

executable Day07Part2
  import:              exe
  main-is:             Part2.hs
  other-modules:       Common
  build-depends:       async, vector
  hs-source-dirs:      day07

executable Day08Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day08

executable Day08Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day08
