cabal-version:       2.2

name:                solutions
version:             2022
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

common base
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall

common exe
  import:              base
  build-depends:       solutions

library
  import:              base
  exposed-modules:     Utils
  build-depends:       vector
  hs-source-dirs:      ../../shared

executable Day01Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day01
  other-modules:       Common

executable Day01Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day01
  other-modules:       Common

executable Day02Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day02
  other-modules:       Common

executable Day02Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day02
  other-modules:       Common

executable Day03Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day03
  build-depends:       containers

executable Day03Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day03
  build-depends:       containers
