cabal-version:       2.2

name:                solutions
version:             2022
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

common base
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall

common exe
  import:              base
  build-depends:       solutions

library
  import:              base
  exposed-modules:     Utils
  build-depends:       vector
  hs-source-dirs:      ../../shared

executable Day01Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day01
  other-modules:       Common

executable Day01Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day01
  other-modules:       Common

executable Day02Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day02
  other-modules:       Common

executable Day02Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day02
  other-modules:       Common

executable Day03Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day03
  build-depends:       containers

executable Day03Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day03
  build-depends:       containers

executable Day04Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day04
  other-modules:       Common

executable Day04Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day04
  other-modules:       Common

executable Day05Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day05
  other-modules:       Common
  build-depends:       containers

executable Day05Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day05
  other-modules:       Common
  build-depends:       containers

executable Day06Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day06

executable Day06Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day06

executable Day07Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day07
  other-modules:       Common
  build-depends:       containers

executable Day07Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day07
  other-modules:       Common
  build-depends:       containers

executable Day08Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day08
  other-modules:       Common
  build-depends:       containers

executable Day08Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day08
  other-modules:       Common

executable Day09Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day09
  build-depends:       containers
  other-modules:       Common

executable Day09Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day09
  build-depends:       containers
  other-modules:       Common

executable Day10Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day10

executable Day10Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day10

executable Day11Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day11
  build-depends:       containers
  other-modules:       Common

-- executable Day11Part2
--   import:              exe
--   main-is:             Part2.hs
--   hs-source-dirs:      day11
--   build-depends:       containers
--   other-modules:       Common

executable Day12Part1
  import:              exe
  main-is:             Part1.hs
  hs-source-dirs:      day12
  build-depends:       containers, fgl
  other-modules:       Common

executable Day12Part2
  import:              exe
  main-is:             Part2.hs
  hs-source-dirs:      day12
  build-depends:       containers, fgl
  other-modules:       Common
